# dag-checks

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  cosmetics.py  diagnosis_dag.py  generate.py  pytest.ini  setup.cfg  setup.py
.github/: labeler.yml
.github/workflows/: ci.yaml
dag_checks/: base.py  dagfile_has_dag.py  no_top_level_query.py  referenced_task_dag_id_exists.py
tests/: __init__.py  conftest.py  test_base.py  test_dagfile_has_dag.py  test_no_top_level_query.py  test_referenced_task_dag_id_exists.py
tests/dags/: dag_dagfile_has_dag.py  dag_no_top_level_query.py  dag_referenced_task_dag_id_exists.py
