# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = dag-checks
summary = DAG checks is a project aiming to ease DAGs troubleshooting.
author = Polidea
author_email = office@polidea.com
url = https://github.com/polidea/dag-checks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
   LICENSE
   NOTICE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Package
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Monitoring
project_urls =
    Documentation=https://github.com/polidea/dag-checks
    Bug Tracker=https://github.com/polidea/dag-checks/issues
    Source Code=https://github.com/polidea/dag-checks

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.6
packages = find:
setup_requires =
   docutils
   gitpython
   setuptools
   wheel
install_requires =
   apache-airflow

[options.packages.find]
include =
    checks*

[options.package_data]
dag_checks=
    py.typed

[files]
packages = dag_checks

[bdist_wheel]
python-tag=py3
